--- a/.github/workflows/tests-rust.yml
+++ b/.github/workflows/tests-rust.yml
@@ -9,7 +9,7 @@ on:
       - 'Cargo.lock'
       - 'rust-toolchain.toml'
       - '.github/workflows/tests-rust.yml'
-      - 'txstatus/**'
+      - 'jsonparsed/**'
       - 'old-faithful-proto/**'
       - 'geyser-plugin-runner/**'
       - 'tests/rust/**'
@@ -19,7 +19,7 @@ on:
       - 'Cargo.lock'
       - 'rust-toolchain.toml'
       - '.github/workflows/tests-rust.yml'
-      - 'txstatus/**'
+      - 'jsonparsed/**'
       - 'old-faithful-proto/**'
       - 'geyser-plugin-runner/**'
       - 'tests/rust/**'
